k8sdev/patchService.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdodev
spec:
  selector:
    app: sdodev
