k8sdev/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: SmoothRolloutStable
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sdodev.38.cc.ucll.cloud
    http:
      paths:
      - path: /
        backend:
          # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
          serviceName: SmoothRolloutStable
          servicePort: 80
