k8sdev/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdodev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdodev
  template:
    metadata:
      labels:
        app: sdodev
    spec:
      containers:
      - name: sdodev
        image: delsynn/sdo:dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdodev
spec:
  rules:
  - host: sdodev.38.cc.ucll.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdodev

---
apiVersion: v1
kind: Service
metadata:
  name: sdodev
spec:
  selector:
    app: sdodev
